--- a/index.html
+++ b/index.html
@@ -15,18 +15,30 @@
                 <a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a>
                 <a href="https://store.google.com/US?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
             </div>
+            <div class="empty-middle-space"> <!-- empty space :) --> </div>
             <div class="links-to-the-right">
                 <!-- links to the right -->
-                <a href="https://mail.google.com/mail/?tab=wm&ogbl">Gmail</a>
-                <a href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Images</a>
-                <!-- A 3x3 grid will go here and a drop down menu will present itself
-                     when the grid is clicked. I've decided that I'm going
-                     to make this grid from scratch. The drop down menu
-                     will be made from a div that appears and disappears when 
-                     the grid is clicked-->
-                <!-- I will construct a circle and place the letter J into 
-                     the circle since that is for my GMAIL account. Nothing
-                     too fancy here -->      
+                <div class="gmail-images-shape"> <!-- this makes a block so the grid
+                    can take place without wrapping around the inside of
+                    the navigation element -->
+                    <a href="https://mail.google.com/mail/?tab=wm&ogbl">Gmail</a>
+                    <a href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Images</a>
+                </div>
+                <!-- place grid here. More practicle to use an image. Simple version -->
+                <!-- <a href="#"><div id="change-image"></div></a> -->
+                <a href="#"><div class="a-grid">
+                    <div class="cell-color"></div>
+                    <div class="cell-color"></div>
+                    <div class="cell-color"></div>
+                    <div class="cell-color"></div>
+                    <div class="cell-color"></div>
+                    <div class="cell-color"></div>
+                    <div class="cell-color"></div>
+                    <div class="cell-color"></div>
+                    <div class="cell-color"></div>
+                </div></a>
+                <!-- consider turning entire document into a grid. Read more -->
+                <!-- place letter J here-->
             </div>
         </nav>
         <main>
