--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
             <div class="google-logo-container">
                 <img src="./google-spring-image.png" alt="Big air balloon and a bunny along for the ride. It's spring time in the photo" class="google-logo">
             </div>
-            <!-- Start creating the text box! -->
             <div class="text-box-flex-container">
                 <div class="text-box-border-container">
                     <div class="magnifying-glass-container">
@@ -64,6 +63,15 @@
                     <div class="microphone-container">
                         <img src="microphone.png" alt="microphone" class="microphone">
                     </div>
+                </div>
+            </div>
+            <!-- start making search buttons! -->
+            <div class="search-container">
+                <div class="google-search-container">
+                    <input type="submit" class="google-search" value="Google Search">
+                </div>
+                <div class="i-am-feeling-lucky-container">
+                    <input type="submit" class="i-am-feeling-lucky" value="I'm Feeling Lucky">
                 </div>
             </div>
         </main>
