Almost Done. Update

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <nav>
             <!-- Left side links-->
             <div class="links-to-the-left">
-                <a class="left-side-links" href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a>
-                <a class="left-side-links" href="https://store.google.com/US?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
+                <a class="left-side-links no-decoration" href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a>
+                <a class="left-side-links no-decoration" href="https://store.google.com/US?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
             </div>
     
             <!-- empty space :) Alternatives? -->
@@ -19,8 +19,8 @@
             <!-- Right side links-->
             <div class="links-to-the-right">
                 <div class="gmail-images-shape">
-                    <a class="right-side-links" href="https://mail.google.com/mail/?tab=wm&ogbl">Gmail</a>
-                    <a class="right-side-links" href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Images</a>
+                    <a class="right-side-links no-decoration" href="https://mail.google.com/mail/?tab=wm&ogbl">Gmail</a>
+                    <a class="right-side-links no-decoration" href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Images</a>
                 </div>
 
                 <!-- I made a grid! -->
@@ -52,7 +52,7 @@
         <!-- Main content! -->
         <main>
             <div class="google-logo-container">
-                <img src="./google-spring-image.png" alt="Big air balloon and a bunny along for the ride. It's spring time in the photo" class="google-logo">
+                <img src="./google-spring-image.png" alt="Big air balloon and a bunny along for the ride. It's spring time in the photo" class="google-logo" title="Spring 2020!">
             </div>
             <div class="text-box-flex-container">
                 <div class="text-box-border-container">
@@ -66,14 +66,33 @@
                 </div>
             </div>
             <!-- start making search buttons! -->
-            <div class="search-container">
-                <div class="google-search-container">
-                    <input type="submit" class="google-search" value="Google Search">
+            <div class="center">
+                <div class="search-container">
+                    <div class="google-search-container">
+                        <input type="submit" class="google-search" value="Google Search">
+                    </div>
+                    <div class="i-am-feeling-lucky-search-container">
+                        <input type="submit" class="i-am-feeling-lucky" value="I'm Feeling Lucky">
+                    </div>
                 </div>
-                <div class="i-am-feeling-lucky-container">
-                    <input type="submit" class="i-am-feeling-lucky" value="I'm Feeling Lucky">
+            </div>
+            <div class="corona-virus-container">
+                <div class="corona-image-container">
+                    <img src="corona-image.gif" alt="A hand holding up five fingers inside of an image of a stop sign" class="corona-image">
+                </div>
+                <div class="do-the-five-container">
+                    <a href="https://www.google.com/search?q=coronavirus+tips&fbx=dothefive" class="no-decoration">DO THE FIVE. Help stop coronavirus</a>
                 </div>
             </div>
         </main>
+        <footer>
+            <div class="footer-container">
+                <div class="footer-links-to-the-left">
+                    <a href="" class="footer-link push-right no-decoration">Advertising</a>
+                    <a href="" class="footer-link no-decoration">Business</a>
+                    <a href="" class="footer-link no-decoration">How Search works</a>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
