--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                 <!-- I made a grid! -->
                 <div class="flex-grid">
-                    <a href="#" class="grid-color">
+                    <a href="#" class="grid-color" title="Google apps">
                         <div class="a-grid">
                             <div class="cell-color"></div>
                             <div class="cell-color"></div>
@@ -59,9 +59,9 @@
                     <div class="magnifying-glass-container">
                         <img src="magnifying-glass.png" alt="magnifying glass" class="magnifying-glass">
                     </div>
-                    <input type="text" class="input" name="search">
+                    <input type="text" class="input" title="Search" name="search">
                     <div class="microphone-container">
-                        <img src="microphone.png" alt="microphone" class="microphone">
+                        <a href="#"><img src="microphone.png" alt="microphone" class="microphone" title="Search by voice"></a>
                     </div>
                 </div>
             </div>
@@ -88,9 +88,27 @@
         <footer>
             <div class="footer-container">
                 <div class="footer-links-to-the-left">
-                    <a href="" class="footer-link push-right no-decoration">Advertising</a>
-                    <a href="" class="footer-link no-decoration">Business</a>
-                    <a href="" class="footer-link no-decoration">How Search works</a>
+                    <div class="advertising">
+                        <a href="https://www.google.com/intl/en_us/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1" class="footer-link no-decoration">Advertising</a>
+                    </div>
+                    <div class="business">
+                        <a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1" class="footer-link no-decoration">Business</a>
+                    </div>
+                    <div class="how-search-works">
+                        <a href="https://google.com/search/howsearchworks/?fg=1" class="footer-link no-decoration">How Search works</a>
+                    </div>
+                </div>
+                <div class="empty-middle-space"></div>
+                <div class="footer-links-to-the-right">
+                    <div class="privacy">
+                        <a href="https://policies.google.com/privacy?fg=1" class="footer-link no-decoration">Privacy</a>
+                    </div>
+                    <div class="terms">
+                        <a href="https://policies.google.com/terms?fg=1" class="footer-link no-decoration">Terms</a>
+                    </div>
+                    <div class="settings">
+                        <a href="https://www.google.com/preferences?hl=en" class="footer-link no-decoration">Settings</a>
+                    </div>
                 </div>
             </div>
         </footer>
